--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,248 @@
-.App {
+.init-nav .navbar-light .navbar-nav .custom {
+  border: 2px solid #3b3b3b;
+  padding: 10px 30px;
+  margin-right: 20px;
+}
+
+.init-nav .navbar-light .navbar-nav .custom:hover {
+  background-color: #3b3b3b !important;
+  color: white !important;
+}
+
+.init-nav .dropdown-menu {
+  left: -279px !important;
+}
+
+.init-nav .dropdown-menu .dropdown-item:hover {
+  background-color: #fec503 !important;
+  color: white !important;
+}
+
+.init-nav .dropdown-toggle::after {
+  display: none;
+  margin-left: 0.255em;
+  vertical-align: 0.255em;
+  content: '';
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-bottom: 0;
+  border-left: 0.3em solid transparent;
+}
+
+.blkstrip {
+  width: 100%;
+  height: 32px;
+  background-color: #3b3b3b;
+  padding: 4px;
+  color: #b0b0b0;
+  font-family: Rubik;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 100;
+  margin-right: 30px;
+}
+
+.landing-intro {
+  background: url('https://instadriver.co/images/uploads/banner/resize/BANNER_1556199205.png');
   text-align: center;
+  color: #fff;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  height: auto;
+  padding-bottom: 40px;
+  padding-top: 40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.blackbox {
+  background-image: url('https://instadriver.co/img/transparent.png');
+  padding: 15px;
+  padding-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.intro-text .intro-lead-in {
+  font-size: 25px;
+  margin-bottom: 25px;
+  font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.form {
+  padding: 30px !important;
 }
 
-.App-link {
-  color: #61dafb;
+.landing-intro select {
+  height: 50px !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.landing-intro input {
+  height: 50px !important;
+}
+
+.btn-primary {
+  background-color: #fed136 !important;
+  border-color: #fed136 !important;
+  height: 50px !important;
+  color: #fff !important;
+  margin-top: 0px !important;
+}
+
+section {
+  padding-top: 58px;
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show > .nav-link {
+  color: #fff !important;
+  background-color: #f8bd00;
+  font-family: Rubik;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 22px;
+}
+
+.nav-pills .nav-link {
+  color: #3b3b3b !important;
+  border-radius: 0px;
+  border: 1px solid #f8bd00 !important;
+  background: #fff;
+}
+
+.service-heading {
+  margin: 15px 0;
+  font-size: 18px;
+  color: #3b3b3b;
+  margin-bottom: 7px;
+  text-transform: none;
+}
+
+.text-muted {
+  color: #6c757d !important;
+}
+
+.yellowbg {
+  background-color: #f8bd00;
+  padding: 50px;
+  color: #ffffff !important;
+}
+
+.padding501 {
+  padding: 50px;
+}
+
+.about {
+  text-align: center;
+  color: #ffffff;
+  background: url('https://instadriver.co/img/imgsmall.png');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  height: auto;
+  padding-bottom: 30px;
+}
+
+.about h4 {
+  margin: 15px 0;
+  font-size: 18px;
+  color: #fff !important;
+  margin-bottom: 7px;
+  text-transform: none;
+}
+
+.box1 {
+  box-sizing: border-box;
+  border: 1px solid #e3e3e1;
+  background-color: #f8bd00;
+  margin: 0px 10px;
+  padding: 10px;
+  padding-bottom: 20px;
+}
+.boxstyle1 {
+  font-size: 45px;
+  color: #fff;
+}
+
+.boxtext1 {
+  color: #ffffff;
+  font-family: Rubik;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 22px;
+  margin-top: 6px;
+  font-weight: 400;
+}
+
+.country .box1 h2 {
+  margin-bottom: 0px !important;
+}
+
+.box2 {
+  box-sizing: border-box;
+  border: 1px solid #e3e3e1;
+  background-color: #3b3b3b;
+  margin: 0px 10px;
+  padding: 10px;
+  padding-bottom: 20px;
+}
+
+.boxstyle2 {
+  font-size: 45px;
+  color: #f8bd00;
+}
+.country .box2 h2 {
+  margin-bottom: 0px !important;
+}
+
+section h2.section-heading {
+  color: #3b3b3b;
+  font-family: Rubik;
+  font-size: 25px;
+  font-weight: 500;
+  line-height: 29px;
+  margin-bottom: 0px;
+}
+
+.country h2 {
+  margin-bottom: 30px !important;
+}
+
+.footer {
+  text-align: center;
+  color: #fff;
+  background-image: url('https://instadriver.co/img/footer.png');
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-position: center center;
+  background-size: cover;
+  height: auto;
+  padding-bottom: 40px;
+  overflow: hidden;
+  margin-top: 50px;
+}
+
+.footer h4 {
+  color: #fff !important;
+}
+
+.links {
+  color: #c7c6bf;
+  font-family: Rubik;
+  font-size: 15px;
+  line-height: 18px;
+  color: #c7c6bf;
+  font-family: Rubik;
+  font-size: 15px;
+  line-height: 18px;
+  font-weight: 100;
+}
+
+.links:hover {
+  color: #fed136;
+}
+
+.footer ul {
+  padding-left: 0px !important;
 }
